# routers/donor.go
@@ -1,11 +1,11 @@
 package routers
 
 import (
-	"github.com/abdulkarim1422/BloodsApp/services"
+	"github.com/abdulkarim1422/BloodsApp/handlers"
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterDonorOpenRoutes(router *gin.Engine) {
-	router.GET("/donors/:id", services.DonorByID)
-	router.POST("/donors", services.CreateDonor)
+func RegisterProtectedDonorRoutes(router *gin.Engine) {
+	router.GET("/donor/:id", handlers.DonorByID)
+	router.POST("/donor", handlers.CreateDonor)
 }
