# routers/patient.go
@@ -1,11 +1,11 @@
 package routers
 
 import (
-	"github.com/abdulkarim1422/BloodsApp/services"
+	"github.com/abdulkarim1422/BloodsApp/handlers"
 	"github.com/gin-gonic/gin"
 )
 
 func RegisterProtectedPatientRoutes(router *gin.Engine) {
-	router.GET("/patients/:id", services.PatientByID)
-	router.POST("/patients", services.CreatePatient)
+	router.GET("/patients/:id", handlers.PatientByID)
+	router.POST("/patients", handlers.CreatePatient)
 }
